re PR target/80569 (i686: "shrx" instruction generated in 16-bit mode)

PR target/80569
	* config/i386/i386.c (ix86_option_override_internal): Disable
	BMI, BMI2 and TBM instructions for -m16.

testsuite/ChangeLog:

	PR target/80569
	* gcc.target/i386/pr80569.c: New test.

From-SVN: r250479